<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical"
    tools:context=".MyProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="@string/scholar_profile"
                android:textColor="#0000FF"
                android:textSize="32sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp">


            <ImageView
                style="@style/profile_pic"
                android:contentDescription="@string/my_profile_pic"
                android:layout_gravity="center"
                android:src="@drawable/joey" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">


            <TextView
                style="@style/MyProfile"
                android:text="@string/my_name" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">


            <TextView
                style="@style/MyProfile"
                android:text="@string/my_track" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">


            <TextView
                style="@style/MyProfile"
                android:text="@string/my_country" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">


            <TextView
                style="@style/MyProfile"
                android:text="@string/my_email" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/teal"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="8dp">

            <TextView
                style="@style/MyProfile"
                android:text="@string/my_phone_number" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
