<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="12dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/alc"
                android:textColor="@color/blue"
                android:background="@color/teal"
                android:textSize="32sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            card_view:cardBackgroundColor="@color/teal"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="12dp">


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/alc_scholars"
                android:src="@drawable/alcwithgoogle" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            card_view:cardBackgroundColor="@color/teal"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="12dp">


            <Button
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:onClick="launchALC"
                android:text="@string/about_alc"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            card_view:cardBackgroundColor="@color/sky_blue"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="12dp">


            <Button
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:onClick="launchProfile"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>

    </LinearLayout>



